fix: fix layout bugs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
-.container, .input-panel {
+.container {
   margin-top: 20px;
   text-align: center;
+  max-width: 800px;
 }
 
 .btn {
